# grpc_proj

./: .gitignore  Makefile  README.rst  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.history/src/app/auth/: auth_20241002152839.py  auth_20241002152846.py  auth_20241002152851.py  auth_20241002152852.py  auth_20241002152911.py  auth_20241002152925.py  auth_20241002152933.py  auth_20241002152937.py  auth_20241002152939.py  auth_20241002152946.py  auth_20241002152949.py  auth_20241002152951.py  auth_20241002152957.py  auth_20241002153004.py  auth_20241002153008.py  auth_20241002153015.py  auth_20241002153022.py  auth_20241002153026.py  auth_20241002153031.py  auth_20241002153034.py  auth_20241002153039.py  auth_20241002153042.py  auth_20241002153047.py  auth_20241002153054.py  auth_20241002153059.py  auth_20241002153106.py  auth_20241002153110.py  auth_20241002153113.py  auth_20241002153115.py  auth_20241002153117.py  auth_20241002153124.py  auth_20241002153131.py  auth_20241002153138.py  auth_20241002153143.py  auth_20241002153147.py  auth_20241002153151.py
.history/src/client/: client_20240929003006.py  client_20240929003957.py
src/app/auth/: auth.py  auth_interceptor.py  thread_local.py
src/app/services/: __init__.py
src/client/: client.py
src/protos/: task.proto
src/server/: server.py
tests/: __init__.py  test_task_service.py
