[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grpc_todo_project"
version = "0.1.0"
description = "Getting hands on with gRPC"
readme = "README.rst"
authors = [
  {name = "Rupak Raut", email = "rupakraut78@gmail.com"}
]
maintainers = [
  {name = "Rupak Raut", email = "rupakraut78@gmail.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/rupaut98/grpc_todo_project/issues"
changelog = "https://github.com/rupaut98/grpc_todo_project/blob/master/changelog.md"
homepage = "https://github.com/rupaut98/grpc_todo_project"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

